# peek

./: .gitignore  README.md  peek.desktop  peek.sh  pyproject.toml
peek/: __init__.py  __main__.py  backend.py  chat.py  cli.py  config.py  daemon.py  ipc.py  markdown.py  notify.py  personality.py  popup.py  portal.py  setup.py
peek/memory/: reflect.py  store.py
peek/personalities/: default.md
peek/tools/: __init__.py  fetch.py  forget_memory.py  note_for_later.py  read_memory.py  sandbox.py  websearch.py  workspace.py
tests/: test_chat.py  test_config.py  test_markdown.py  test_memory_store.py  test_reflect.py  test_tools.py
